<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.blogDetails.ui.BlogDetails">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/space_10"
      >
      <ImageView
          android:layout_marginTop="@dimen/space_20"
          android:id="@+id/cover_photo"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:src="@drawable/placeholder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

      </ImageView>

      <TextView

          android:id="@+id/title_value"
          android:text="@string/description_tv"
          android:textSize="@dimen/_16sdp"
          android:layout_marginTop="@dimen/space_20"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:textStyle="bold"
          android:layout_marginLeft="@dimen/space_5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cover_photo"
          android:gravity="center_horizontal">

      </TextView>

      <TextView

          android:id="@+id/des_value"
          android:text="@string/description_tv"
          android:textSize="@dimen/_15sdp"
          android:layout_marginTop="@dimen/space_30"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/title_value"
          >

      </TextView>
      <TextView

          android:id="@+id/cats_title"
          android:text="@string/category_tv"
          android:textSize="@dimen/_15sdp"
          android:layout_marginTop="@dimen/space_30"
          android:layout_width="match_parent"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/des_value"
          >

      </TextView>
      <TextView

          android:id="@+id/cats_value"
          android:text="@string/category_tv"
          android:textSize="@dimen/_15sdp"
          android:layout_marginTop="@dimen/space_5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cats_title"
          >

      </TextView>
      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/author_img"
          android:layout_width="70dp"
          android:layout_height="70dp"
          android:layout_marginTop="@dimen/space_35"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cats_value" />

      <TextView

          android:id="@+id/author_name_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/space_5"
          android:text="@string/author_name_tv"
          android:textSize="@dimen/_16sdp"
          android:textStyle="bold"
          android:layout_marginTop="@dimen/space_30"
          app:layout_constraintStart_toEndOf="@+id/author_img"
         app:layout_constraintTop_toBottomOf="@id/cats_value">

      </TextView>
      <TextView

          android:id="@+id/author_name_value"
          android:text="@string/description_tv"
          android:textSize="@dimen/_15sdp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/author_name_tv"
          app:layout_constraintTop_toBottomOf="@+id/author_name_tv"
          >

      </TextView>
      <TextView

          android:id="@+id/author_profession_tv"
          android:text="@string/author_profession_tv"
          android:textSize="@dimen/_16sdp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:gravity="center"
         app:layout_constraintStart_toStartOf="@+id/author_name_tv"
          app:layout_constraintTop_toBottomOf="@+id/author_name_value"
          >

      </TextView>

      <TextView

          android:id="@+id/author_profession_value"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/description_tv"
          android:textAlignment="center"
          android:textSize="@dimen/_15sdp"

          app:layout_constraintStart_toStartOf="@+id/author_name_tv"
          app:layout_constraintTop_toBottomOf="@+id/author_profession_tv">

      </TextView>
      <Button
          android:id="@+id/edit_btn"
          app:layout_constraintTop_toBottomOf="@+id/author_name_tv"
          app:layout_constraintEnd_toEndOf="parent"
          android:text="@string/Edit_blog"
          android:textSize="@dimen/_18sdp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

      </Button>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</FrameLayout>
